profile image fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img
           alt="profile image"
           class="img-fluid p-2 m-2"
-          src=".img/lineart_trans.png"
+          src="./img/lineart_trans.png"
           style="width: 250px;"
         />
         <div class="text-center">
