gtag added, useless images removed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" style="scroll-behavior: smooth;">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125036842-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-125036842-1");
+    </script>
     <title>Matvei Tikka</title>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Hei, my name is Matvei Tikka. Welcome to my page!" />
+    <meta name="description" content="My name is Matvei Tikka. Welcome to my page!" />
     <meta name="author" content="Matvei Tikka" />
     <link href="./bootstrap/bootstrap.min.css" rel="stylesheet" />
   </head>
@@ -33,7 +44,7 @@
               <a href="https://aemail.com/4yn" target="_blank">Email</a>
             </li>
             <li class="list-inline-item">
-              <a href="./cv_matvei_tikka_eng.pdf" target="_blank">Resume</a>
+              <a href="./cv_matvei_tikka.pdf" target="_blank">Resume</a>
             </li>
           </ul>
         </div>
