--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <p>
             <code>React.js, Node.js, Bootstrap, REST API</code>
           </p>
-          <a href="https://matvei.xyz/app/yrityshaku/" target="_blank">Web app</a>
+          <a href="https://matikka96.github.io/yrityshaku/" target="_blank">Web app</a>
           <span> |</span>
           <a href="https://github.com/matikka96/yrityshaku" target="_blank">GitHub</a>
         </div>
