text updated, resume now hosted on dropbox, redirect functionality added for easier maintenance

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="scroll-behavior: smooth;">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
     <!-- Google Tag Manager -->
     <script>
@@ -14,8 +14,8 @@
         f.parentNode.insertBefore(j, f);
       })(window, document, "script", "dataLayer", "GTM-MVBW42B");
     </script>
-
     <!-- End Google Tag Manager -->
+
     <title>Matvei Tikka</title>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -37,7 +37,7 @@
           alt="profile image"
           class="img-fluid m-3 rounded-circle shadow"
           src="./img/profile_sun_01.jpg"
-          style="max-height: 225px;"
+          style="max-height: 225px"
         />
         <div class="text-center">
           <h1>Matvei Tikka<br /></h1>
@@ -53,7 +53,11 @@
               <a href="https://aemail.com/4yn" target="_blank">Email</a>
             </li>
             <li class="list-inline-item">
-              <a href="./cv_matvei_tikka.pdf" target="_blank">Resume</a>
+              <a
+                href="https://www.dropbox.com/sh/074ot6mdkcm1jnv/AAD0Fj-pNUPnrmAU1KtIWocWa?dl=0"
+                target="_blank"
+                >Resume</a
+              >
             </li>
           </ul>
         </div>
@@ -88,15 +92,15 @@
         <div class="col-sm-6">
           <h4>Saledor <small class="ml-2 text-muted">In development</small></h4>
           <p class="text-justify">
-            Web app that aggregates fashion sale items from several vendors into one place. Python
+            Web app that aggregates fashion items from several vendors into single place. Python
             script is parsing products from different API’s, normalizes data and saves it in to the
-            local SQLite database. Server is running on Node.js with the help of Express.js
-            framework. It loads data from the database according to the requests from the client
-            side. React.js is used in pair with Bootstrap to deliver fast and intuitive client side
+            SQL database. Server is running on Node.js with the help of Express.js framework. It
+            loads data from the database according to the requests from the client side. React.js is
+            used in pair with Bootstrap to deliver fast, intuitive and mobile friendly client side
             experience.
           </p>
           <p>
-            <code>React.js, Node.js, Bootstrap, Python, SQLite, Cloud services</code>
+            <code>React.js, Node.js, Bootstrap, Python, SQL, Server management</code>
           </p>
           <a href="https://saledor.com" target="_blank">www.saledor.com</a>
         </div>
@@ -139,13 +143,13 @@
         <div class="col-sm-6">
           <h4>VAISAL</h4>
           <p class="text-justify">
-            Vaisal is a young and fast growing real estate business. We had two main goals to
-            achieve on this case: create a memorable and modern branding for the company and then
-            develop a website based on that. Website needed to showcase allthe main services and
-            provide all necessary contact information.
+            Vaisal is a young and fast-growing real estate business. I had two main goals to achieve
+            on this case: create a memorable and modern branding for the company and develop a
+            website with that in mind. From informative point of view the objective was to showcase
+            main services of the business and provide all necessary contact information.
           </p>
           <p>
-            <code>Wordpress, CSS, Graphic, Pixelmator</code>
+            <code>Wordpress, CSS, SEO optimization, Graphical design</code>
           </p>
           <a href="https://vaisal.fi" target="_blank">www.vaisal.fi</a>
         </div>
@@ -156,7 +160,7 @@
           <img
             src="./img/scraper.png"
             class="img-fluid mx-auto d-block rounded p-4"
-            style="max-height: 320px;"
+            style="max-height: 320px"
             alt="Responsive image"
           />
         </div>
@@ -169,7 +173,7 @@
             data and check for the errors and malfunctions.
           </p>
           <p>
-            <code>Python, SQLite, Raspberry Pi</code>
+            <code>Python, SQLite, REST API, Raspberry Pi</code>
           </p>
           <a href="https://github.com/matikka96/subreddit_scraper" target="_blank">GitHub</a>
         </div>
