redirect added as parameter to the url

--- a/redirect.html
+++ b/redirect.html
@@ -15,7 +15,7 @@
   <body>
     <script>
       if (document.referrer == "") {
-        window.location.replace("https://matvei.xyz/");
+        window.location.replace("https://matvei.xyz/?redirect");
       } else {
         window.location.replace("https://matvei.xyz/?ref=" + document.referrer);
       }
