removed http urls

--- a/index.html
+++ b/index.html
@@ -52,18 +52,17 @@
             <li class="list-inline-item">
               <a href="https://aemail.com/4yn" target="_blank">Email</a>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <a
                 href="https://www.dropbox.com/sh/074ot6mdkcm1jnv/AAD0Fj-pNUPnrmAU1KtIWocWa?dl=0"
                 target="_blank"
                 >Resume</a
               >
-            </li>
+            </li> -->
           </ul>
         </div>
         <a href="#Projects-link">
           <svg
-            xmlns="http://www.w3.org/2000/svg"
             width="40"
             height="40"
             viewBox="0 0 24 24"
