updated redirect url

--- a/redirect.html
+++ b/redirect.html
@@ -15,9 +15,9 @@
   <body>
     <script>
       if (document.referrer == "") {
-        window.location.replace("https://matvei.xyz/?redirect");
+        window.location.replace("www.matvei.xyz/?redirect");
       } else {
-        window.location.replace("https://matvei.xyz/?ref=" + document.referrer);
+        window.location.replace("www.matvei.xyz/?ref=" + document.referrer);
       }
     </script>
   </body>
